# api/api/swagger/swagger.yaml
@@ -105,6 +105,28 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /listInsert:
+    x-swagger-router-controller: main-controller
+    post:
+      operationId: listInsert
+      description: "Insert a list"
+      parameters:
+        - name: value
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Authentication"
+      responses:
+        "200":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/Token"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/Error"
+
+
 definitions:
   Authentication:
     type: object
